# canadian-tax-chatbot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
data/corpus/: current
data/corpus/corpus-2026-01-13/: corpus_manifest.json
docs/: PRD.md  architecture.md  ingestion-spec.md  research-notes.md
eval/: README.md
eval/canadian-tax-qa-dataset/: basic_questions.jsonl  metadata.json  should_refuse.jsonl  tricky_questions.jsonl
scripts/: cli.py  download_ita.py  evaluate_chatbot.py  extract_fixtures.py  ingest_corpus.py  verify_retrieval.py
src/chat/: __init__.py  chatbot.py  citations.py  llm_interface.py  prompts.py
src/chat/providers/: __init__.py  openai.py
src/loaders/: chunker.py  xml_parser.py
src/retrieval/: embedder.py  retriever.py  vector_store.py
tests/: test_chatbot.py  test_chunker.py  test_citations.py  test_embedder.py  test_llm_interface.py  test_prompts.py  test_vector_store.py  test_xml_parser.py
tests/fixtures/: ita_section_118.xml  ita_section_146.xml  ita_section_248.xml  mock_responses.json
